Revert "Fix --guest scrollbar display"
This reverts commit f1c48146678af8efc90d6634d822ea4d58950cea.

--- a/css/main_jcink.css
+++ b/css/main_jcink.css
@@ -12687,9 +12687,6 @@ body.light {
   ::-webkit-scrollbar-thumb {
     background:var(--main-accent);
   }
-  .user-groupid-2 ::-webkit-scrollbar-thumb {
-    background:var(--guest);
-  }
   ::-webkit-scrollbar-track {
     background:#333;
   }
